Анимации главной страницы

--- a/index.html
+++ b/index.html
@@ -469,6 +469,12 @@
           </ul>
         </div>
       </section>
+      <!-- <button>Открыть Модалку</button> -->
+      <div class="backdrop is-hidden">
+        <div class="modal">
+          <button">Закрыть</button>
+        </div>
+      </div>
     </main>
 
     <!--Подвал -->
