Добавляет анимацию портфолио

--- a/index.html
+++ b/index.html
@@ -469,10 +469,11 @@
           </ul>
         </div>
       </section>
+
       <!-- <button>Открыть Модалку</button> -->
       <div class="backdrop is-hidden">
         <div class="modal">
-          <button">Закрыть</button>
+          <button type="button" class="button-modal">X</button>
         </div>
       </div>
     </main>
