--- a/portfolio.html
+++ b/portfolio.html
@@ -91,16 +91,18 @@
           <ul class="portfolio list">
             <li class="portfolio-item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/technokryak1.jpg"
-                  alt="Пример создания сайта"
-                  width="370"
-                />
-                <p class="portfolio-item-hover">
-                  Ресурс предлагает комплексные предложения с разным уровнем
-                  функционала и сервисов. Все это позволит посетителю получить
-                  исчерпывающие сведения о компании или частном лице.
-                </p>
+                <div class="portfolio-card">
+                  <img
+                    src="./images/technokryak1.jpg"
+                    alt="Пример создания сайта"
+                    width="370"
+                  />
+                  <p class="portfolio-item-hover">
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Технокряк</h3>
                   <p class="section-article">Веб-сайт</p>
@@ -109,16 +111,18 @@
             </li>
             <li class="portfolio-item">
               <a href="">
+                <div class="portfolio-card">
                 <img
                   src="./images/poster1.jpg"
                   alt="Пример постера"
                   width="370"
                 />
-                <p class="portfolio-item-hover">
+                                <p class="portfolio-item-hover">
                   Ресурс предлагает комплексные предложения с разным уровнем
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">
                     Постер New Orlean vs Golden Star
@@ -129,6 +133,7 @@
             </li>
             <li class="portfolio-item">
               <a href="">
+                <div class="portfolio-card">
                 <img
                   src="./images/seafood1.jpg"
                   alt="Пример приложения для ресторана"
@@ -139,6 +144,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Ресторан Seafood</h3>
                   <p class="section-article">Приложение</p>
@@ -146,6 +152,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/prime1.jpg"
@@ -157,6 +164,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Проект Prime</h3>
                   <p class="section-article">Маркетинг</p>
@@ -164,6 +172,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/boxes1.jpg"
@@ -175,6 +184,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Проект Boxes</h3>
                   <p class="section-article">Приложение</p>
@@ -182,6 +192,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/inspiration2.jpg"
@@ -193,6 +204,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Inspiration has no Borders</h3>
                   <p class="section-article">Веб-сайт</p>
@@ -200,6 +212,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/limited-edition1.jpg"
@@ -211,6 +224,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Издание Limited Edition</h3>
                   <p class="section-article">Дизайн</p>
@@ -218,6 +232,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/lab1.jpg"
@@ -229,6 +244,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Проект LAB</h3>
                   <p class="section-article">Маркетинг</p>
@@ -236,6 +252,7 @@
               </a>
             </li>
             <li class="portfolio-item">
+              <div class="portfolio-card">
               <a href="">
                 <img
                   src="./images/growing-business1.jpg"
@@ -247,6 +264,7 @@
                   функционала и сервисов. Все это позволит посетителю получить
                   исчерпывающие сведения о компании или частном лице.
                 </p>
+                </div>
                 <div class="border">
                   <h3 class="section-title">Growing Business</h3>
                   <p class="section-article">Приложение</p>
