--- a/index.html
+++ b/index.html
@@ -68,7 +68,19 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" class="button secondary">Заказать услугу</button>
+        <button type="button" class="button secondary" data-modal-open>
+          Заказать услугу
+        </button>
+        <!-- Модальное окно -->
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="button-modal" data-modal-close>
+              <svg class="modal-icon">
+                <use href="./images/symbol-defs.svg#icon-Cross"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </section>
 
       <!--Преимущества компании-->
@@ -469,13 +481,6 @@
           </ul>
         </div>
       </section>
-
-      <!-- <button>Открыть Модалку</button> -->
-      <div class="backdrop is-hidden">
-        <div class="modal">
-          <button type="button" class="button-modal">X</button>
-        </div>
-      </div>
     </main>
 
     <!--Подвал -->
@@ -563,5 +568,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
